--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "firebase": "8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.7",
     "web-vitals": "^2.1.4"
@@ -38,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
