--- a/firebase.json
+++ b/firebase.json
@@ -4,7 +4,7 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": "build",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -18,6 +18,6 @@
     ]
   },
   "storage": {
-    "rules": " storage.rules"
+    "rules": "storage.rules"
   }
 }
